# ai-interviewer

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.devcontainer/: devcontainer.json
tests/: test_models.py  test_simulation.py
